Show inputs in a lifecycle message and fixed test issues